# llmchatapplication

fastapi-llm-similarity/: Pipfile  pyproject.toml  requirements.txt
fastapi-llm-similarity/project_app/: app.py  config.py  worker.py
