[tool.poetry]
name = "fastapi-llm-similarity"
version = "0.1.0"
description = "FastAPI application for project similarity using embeddings and ChromaDB"
authors = ["chhatra <shahkhesavchhatra@gmail.com>"]
readme = "README.md"
packages = [{ include = "fastapi_llm_similarity", from = "src" }]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
chromadb = "^0.5.0"
torch = "^2.3.0"
sentence-transformers = "^3.0.1"
redis = "^5.0.1"
rq = "^1.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"